Fix padding on mobile

--- a/src/components/homepage/Hero.module.css
+++ b/src/components/homepage/Hero.module.css
@@ -17,7 +17,7 @@
 
 @media (max-width: 966px) {
   .heroBanner {
-    padding: 2rem;
+    padding: 4rem 2rem;
   }
 
   .illustration {
